2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-scsi.c: Don't remove '_' from "generic_changer".
	
2006-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h, common-src/security-util.c,
	  common-src/util.h, configure.in,
	  oldrecover-src/amrecover.c, oldrecover-src/extract_list.c,
	  recover-src/amrecover.c, recover-src/extract_list.c,
	  restore-src/amrestore.c, server-src/conffile.c,
	  server-src/dumper.c: Fix compiler error on Tru64.

2006-11-08  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: set off_t variable to 0 before sscanf.
	* server-src/planner.c: set off_t variable to 0 before sscanf.

2006-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl.in: Improve error message.

2006-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Fix coverity bug 170.
	* server-src/diskfile.c: Fix coverity bug 147.

2006-11-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/conffile.c (validate_chunksize): Check chunksize is >=
						      2*DISK_BLOCK_KB

2006-11-06  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amanda.h: Define OFF_T_STRTOL.
	* configure.in: Check for strtol and strtoll.

2006-11-02  Ian Turner <ian@zmanda.com>
	* common-src/amanda.h: Use atol if atoll is missing.

2006-11-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Better message on invalid size.

2006-11-02  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: List bsdudp as a udp transport.

2006-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/diskfile.c: Don't use 0 for NULL.

2006-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/clientconf.c: Define AMANDATES_FILE
	* client-src/amandates.h: Don't define AMANDATES_FILE

2006-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Rename DUMPTYPE_START_T to DUMPTYPE_STARTTIME.