@@ -23,6 +23,7 @@
 <cmdsynopsis>
   <command>amgetconf</command>    
     <arg choice='opt'><replaceable>config</replaceable></arg>
+    <arg choice='opt'><replaceable>--list</replaceable></arg>
     <arg choice='plain'><replaceable>parameter</replaceable></arg>
     <group><arg choice='plain'>-o</arg><arg choice='plain'><replaceable>configoption</replaceable></arg></group>*
 </cmdsynopsis>
@@ -86,7 +87,62 @@ man page for more details about &A;.</para>
 <variablelist remap='TP'>
 
   <varlistentry>
-  <term><emphasis remap='B'>-o</emphasis> <replaceable>configoption</replaceable></term>
+  <term><emphasis remap='B'>--list</emphasis></term>
+  <listitem>
+<para>The parameter must be 'tapetype', 'dumptype, 'holdingdisk' or 'interface'. It will output, one by line, the list of identifier for the parameter.</para>
+<variablelist remap='TP'>
+<varlistentry>
+  <listitem>
+<para><emphasis remap='B'>--list tapetype</emphasis></para>
+<para>Output the list of tapetype, one by line.</para>
+  </listitem>
+</varlistentry>
+<varlistentry>
+  <listitem>
+<para><emphasis remap='B'>--list dumptype</emphasis></para>
+<para>Output the list of dumptype, one by line.</para>
+  </listitem>
+</varlistentry>
+<varlistentry>
+  <listitem>
+<para><emphasis remap='B'>--list holdingdisk</emphasis></para>
+<para>Output the list of holdingdisk, one by line.</para>
+  </listitem>
+</varlistentry>
+<varlistentry>
+  <listitem>
+<para><emphasis remap='B'>--list interface</emphasis></para>
+<para>Output the list of interface, one by line.</para>
+  </listitem>
+</varlistentry>
+</variablelist>
+  </listitem>
+  </varlistentry>
+
+  <varlistentry>
+  <term><emphasis remap='B'>parameter</emphasis></term>
+  <listitem>
+<para>It could be one of the below format</para>
+  </listitem>
+  <listitem>
+  runtapes
+  </listitem>
+  <listitem>
+  DUMPTYPE:no-compress:compress
+  </listitem>
+  <listitem>
+  TAPETYPE:HP-DAT:length
+  </listitem>
+  <listitem>
+  INTERFACE:local:use
+  </listitem>
+  <listitem>
+  HOLDINGDISK:hd1:use
+</listitem>
+</varlistentry>
+
+<varlistentry>
+<term><emphasis remap='B'>-o</emphasis> <replaceable>configoption</replaceable></term>
   <listitem>
 <para>See the "<emphasis remap='B'>CONFIGURATION OVERWRITE</emphasis>" section in <citerefentry><refentrytitle>amanda</refentrytitle><manvolnum>8</manvolnum></citerefentry>.</para>
   </listitem>
