@@ -25,7 +25,7 @@
  *			   University of Maryland at College Park
  */
 /*
- * $Id: conffile.h,v 1.72.2.2 2006/11/01 14:45:41 martinea Exp $
+ * $Id: conffile.h,v 1.72.2.3 2006/11/09 14:35:10 martinea Exp $
  *
  * interface for config file reading code
  */
@@ -329,9 +329,11 @@ double getconf_real(confparm_t parameter);
 char *getconf_str(confparm_t parameter);
 int getconf_taperalgo(confparm_t parameter);
 char *getconf_byname(char *confname);
+char *getconf_list(char *listname);
 dumptype_t *lookup_dumptype(char *identifier);
 dumptype_t *read_dumptype(char *name, FILE *from, char *fname, int *linenum);
 tapetype_t *lookup_tapetype(char *identifier);
+holdingdisk_t *lookup_holdingdisk(char *identifier);
 interface_t *lookup_interface(char *identifier);
 holdingdisk_t *getconf_holdingdisks(void);
 long int getconf_unit_divisor(void);
