@@ -1,4 +1,15 @@
 2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/conffile.c (getconf_byname):
+	                        Parse "DEFINE:identifer:parameter" format.
+	* server-src/conffile.c (getconf_list): New function to list a DEFINE.
+	* server-src/conffile.c (lookup_holdingdisk): New function.
+	* server-src/conffile.h (getconf_list,
+	                         lookup_holdingdisk): New prototype.
+	* server-src/getconf.c: accept --list argument and
+	                        "DEFINE:identifer:parameter" format.
+	* man/xml-source/amgetconf.8.xml: Document.
+
+2006-11-09  Jean-Louis Martineau <martineau@zmanda.com>
 	* changer-src/chg-scsi.c: Don't remove '_' from "generic_changer".
 	
 2006-11-08  Jean-Louis Martineau <martineau@zmanda.com>
